--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="details-area">
                             <div class="select-memory mt-5 mb-5">
                                 <h4>Memory</h4>
-                                <button id="default-memory-price" class="btn btn-outline-dark me-2">8GB unified
+                                <button id="memory-price-8GB" class="btn btn-outline-dark me-2">8GB unified
                                     memory</button>
                                 <button id="memory-price-16GB" class="btn btn-outline-dark me-2">16GB unified
                                     memory</button>
